--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
     <div id="app-container">
     </div>
     
+    <div id="code-output-panel" class="collapsed">
+        <div id="code-toggle-tab" class="code-toggle-tab">
+            <span class="code-toggle-text">TONE.JS CODE</span>
+            <span class="code-toggle-icon">▲</span>
+        </div>
+        <div class="code-panel-content">
+            <div class="code-panel-header">
+                <h2 class="code-panel-title">TONE.JS CODE EXPORT</h2>
+                <button id="copy-button" class="copy-code-button">COPY CODE</button>
+            </div>
+            <textarea id="code-display" readonly></textarea>
+        </div>
+    </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
