--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>T.E. GRID SYNTHESIS</h1>
+        <h1>TONEDESIGNER</h1>
     </header>
     
     <div id="app-container">
