cable dragging visual

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
 
     <script src="modules.js"></script>
+    <script src="PatchingController.js"></script>
     <script src="app.js"></script>
 </body>
 
