--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
 
     <div id="slide-menu" class="slide-menu">
         <div class="menu-content">
-            <div class="menu-item">PATCH MANAGER</div>
-            <div class="menu-divider"></div>
-            <div class="menu-item">SOUND LIBRARY</div>
-            <div class="menu-divider"></div>
-            <div class="menu-item">SETTINGS</div>
-            <div class="menu-divider"></div>
-            <div class="menu-item">EXPORT CODE</div>
-            <div class="menu-divider"></div>
+            <a href="https://buymeacoffee.com/watusi">
+                <div class="menu-item">SUPPORT</div>
+            </a>
             <div class="menu-item">ABOUT</div>
+            <a href="https://github.com/lawwatusi">
+                <div class="menu-item">GITHUB</div>
+            </a>
         </div>
     </div>
 
@@ -35,7 +33,9 @@
 
     <div id="code-output-panel" class="collapsed">
         <div id="code-toggle-tab" class="code-toggle-tab">
-            <span class="code-toggle-text">TONE.JS CODE</span>
+            <span class="code-toggle-text">
+                CODE
+            </span>
             <span class="code-toggle-icon">▲</span>
         </div>
         <div class="code-panel-content">
@@ -48,7 +48,7 @@
     </div>
 
     <footer id="app-footer">
-        by watusi
+        by <a href="https://watusi.cloud" target="_blank" class="watusi-link" style="margin-left:5px"> watusi</a>
     </footer>
 
     <script src="modules.js"></script>
