--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="menu-item">SUPPORT</div>
             </a>
             <div class="menu-item">ABOUT</div>
-            <a href="https://github.com/lawwatusi">
+            <a href="https://github.com/watusiii">
                 <div class="menu-item">GITHUB</div>
             </a>
         </div>
